--- a/ms-photo-storage/src/main/resources/application.yml
+++ b/ms-photo-storage/src/main/resources/application.yml
@@ -1,26 +1,35 @@
 server:
-  port: 8081
-
+  port: 8081  # ms-photo-storage'?n çal??aca?? port (ms-customer ile çak??mamas? için farkl? olabilir)
 
 spring:
+  application:
+    name: ms-photo-storage
+
   datasource:
-    url: jdbc:postgresql://localhost:5433/postgres
+    url: jdbc:postgresql://localhost:5433/postgres    # Postgres örne?i
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
-    hikari:
-      maximum-pool-size: 10
 
-  redis:
-    jedis:
-      pool:
-        max-size: 10
-        min-size: 1
-        max-total: 20
-        max-wait-duration: -1ms
+  jpa:
+    hibernate:
+      ddl-auto: update  # Geli?tirme a?amas?nda tabloyu otomatik günceller
+    show-sql: true      # Konsolda SQL log görebilmek için
+
+  rabbitmq:
+    host: localhost
+    port: 5672  # BURANI DÜZ?LTD?M
+    username: guest
+    password: guest
+
+
   data:
     redis:
       host: localhost
-      port: 6380
-      password: ""
-      timeout: 2000
+      port: 6379
+
+logging:
+  level:
+    root: INFO
+    # Uygulamam?z?n kendi paketlerinde detayl? log isterseniz:
+    az.xalqbank.msphotostorage: DEBUG
