--- a/ms-customers/src/main/resources/application.yml
+++ b/ms-customers/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 server:
   port: 8085
 spring:
+  application:
+    name: ms-customers
+
   datasource:
     url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
@@ -34,3 +37,10 @@ spring:
       host: localhost
       port: 6379
       password: ""
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+      register-with-eureka: true  # Eureka serverinə qeydiyyat
+      fetch-registry: true  # Eureka serverdən qeydiyyat al
+      instance-info-replication-interval-seconds: 10  # Yenilənmə intervalı
