--- a/ms-gateway/src/main/resources/application.yml
+++ b/ms-gateway/src/main/resources/application.yml
@@ -13,24 +13,15 @@ spring:
   cloud:
     gateway:
       routes:
-        - id: ms-customers
+        - id: ms-customer
           uri: http://localhost:8085/
           predicates:
-            - Path=/customers/**
-          filters:
-            - StripPrefix=1
+            - Path=/api/v1/customers/**
         - id: ms-file-upload
           uri: http://localhost:8086/
           predicates:
-            - Path=/file-upload/**
-          filters:
-            - StripPrefix=1
-#        - id: ms-exchange
-#          uri: http://localhost:8083/
-#          predicates:
-#            - Path=/exchange/**
-#          filters:
-#            - StripPrefix=1
+            - Path=/api/v1/files/**
+
 
 management:
   endpoints:
