--- a/ms-file-upload/src/main/resources/application.yml
+++ b/ms-file-upload/src/main/resources/application.yml
@@ -4,39 +4,33 @@ server:
 spring:
   application:
     name: ms-file-upload
-
   datasource:
-    url: jdbc:postgresql://localhost:5433/postgres
+    url: jdbc:postgresql://postgres-file-upload:5432/postgres
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
-
   jpa:
     hibernate:
-      ddl-auto: update  # Geliştirme aşamasında tabloyu otomatik günceller
-    show-sql: true      # Konsolda SQL log görebilmek için
-
+      ddl-auto: update
+    show-sql: true
   rabbitmq:
-    host: localhost
-    port: 5672  # BURAYI DÜZENLEDİM
+    host: rabbitmq
+    port: 5672
     username: guest
     password: guest
-
   data:
     redis:
-      host: localhost
+      host: redis
       port: 6379
-
   eureka:
     client:
       service-url:
-        default-zone: http://localhost:8761/eureka/  # Eureka Server URL
-      register-with-eureka: true  # Eureka serverinə qeydiyyat
-      fetch-registry: true  # Eureka serverdən qeydiyyat al
-      instance-info-replication-interval-seconds: 10  # Yenilənmə intervalı
+        default-zone: http://eureka-server:8761/eureka/
+      register-with-eureka: true
+      fetch-registry: true
+      instance-info-replication-interval-seconds: 10
 
 logging:
   level:
     root: INFO
-    # Uygulamamızın kendi paketlerinde detaylı log isterseniz:
     az.xalqbank.msphotostorage: DEBUG
